--- a/src/sentry/templates/sentry/403-csrf-failure.html
+++ b/src/sentry/templates/sentry/403-csrf-failure.html
@@ -2,19 +2,34 @@
 
 {% load i18n %}
 
-{% block title %}{% trans "CSRF Verification Failed" %} | {{ block.super }}{% endblock %}
+{% block title %}{% trans "CSRF Validation Failed" %} | {{ block.super }}{% endblock %}
 
 {% block main %}
     <section class="body">
+        {% csrf_token %}
+
         <div class="page-header">
-            <h2>{% trans "CSRF Verification Failed" %}</h2>
+            <h2>{% trans "CSRF Validation Failed" %}</h2>
         </div>
 
         <p>{% trans "A required security token was not found or was invalid." %}</p>
 
-        <p>{% trans "If you're continually seeing this issue, try the following:" %}</p>
+        <div style="margin: 20px 0;">
+            <button id="csrf-rotate-btn" class="btn btn-primary">
+                {% trans "Rotate the CSRF Token" %}
+            </button>
+            <span id="csrf-status" style="margin-left: 10px;"></span>
+        </div>
+
+        <p>{% trans "Why are you encountering a CSRF error after login?" %}</p>
+        <ul>
+          <li>See explanation from <a href="https://docs.djangoproject.com/en/5.2/ref/csrf/#why-might-a-user-encounter-a-csrf-validation-failure-after-logging-in" target="_blank">Django docs</a></li>
+        </ul>
+
+        <p>{% trans "If you're continually seeing this issue, try the following steps:" %}</p>
 
         <ol>
+          <li>{% trans "Close other tabs with Sentry loaded." %}</li>
           <li>{% trans "Clear cookies (at least for Sentry's domain)." %}</li>
           <li>{% trans "Reload the page you're trying to submit (don't re-submit data)." %}</li>
           <li>{% trans "Re-enter the information, and submit the form again." %}</li>
@@ -33,5 +48,105 @@
         {% endif %}
 
         <p>Read more about <a href="http://en.wikipedia.org/wiki/Cross-site_request_forgery">CSRF on Wikipedia</a>.</p>
+
+        <script>
+          const status = document.getElementById('csrf-status');
+          const button = document.getElementById('csrf-rotate-btn');
+
+          /**
+           * Automatically refresh page to prevent form resubmission
+           * Set a short timeout for UX, so user can have a glimpse of the request status
+           * before they are forcefully redirected off the page.
+           */
+          const forceRefreshPage = () => {
+            setTimeout(() => {
+              // NOTE: window.location.reload(true) does not work on Chrome
+              window.location.replace(window.location.href);
+            }, 500);
+          };
+
+          /**
+           * API call to logout + delete cookies
+           */
+          const fetchDeleteLogin = async () => {
+            const csrfToken = document.querySelector('input[name="csrfmiddlewaretoken"]').value;
+            return await fetch('/api/0/auth/?referrer=csrf_error', {
+              method: 'DELETE',
+              headers: {'X-CSRFToken': csrfToken},
+              credentials: 'include',
+            });
+          };
+
+          /**
+           * API call to rotate CSRF token
+           */
+          const fetchPutCsrf = async (isAutoRotate = false) => {
+            const referrer = isAutoRotate ? 'csrf_error' : 'csrf_error_repeat';
+            return await fetch(`/api/0/auth-v2/csrf/?referrer=${referrer}`, {
+              method: 'PUT',
+              credentials: 'include',
+            });
+          };
+
+          /**
+           * onClick handler to rotate CSRF token. If 403 error, there's an existing session,
+           * so try to logout to clear cookies
+           */
+          const rotateCsrf = async (isAutoRotate = false) => {
+            button.disabled = true;
+            button.textContent = '{% trans "Rotating..." %}';
+            status.textContent = '';
+
+            try {
+              const csrfRes = await fetchPutCsrf(isAutoRotate);
+              const logoutRes = csrfRes.status == 403 && (await fetchDeleteLogin());
+              if (!csrfRes.ok && !logoutRes.ok) {
+                throw new Error();
+              }
+
+              status.textContent = '{% trans "Token rotated! Refreshing the page in 1 sec..." %}';
+              status.style.color = 'green';
+              forceRefreshPage();
+            } catch (error) {
+              status.textContent = '{% trans "Failed to rotate token." %}';
+              status.style.color = 'red';
+            } finally {
+              button.disabled = false;
+              button.textContent = '{% trans "Rotate CSRF Token" %}';
+            }
+          };
+
+          /**
+           * Register onClick using JS instead of HTML to guarantee that method exists
+           * before it is registered
+           */
+          button.addEventListener('click', () => rotateCsrf(false));
+
+          /**
+           * If user has not see this this page in the last 5min (i.e. they are not stuck
+           * in a loop), then we invoke rotateCsrf() to try to fix the problem for them
+           */
+          const autoRotateCsrf = () => {
+            const FIVE_MINUTES_MS = 5 * 60 * 1000;
+
+            const storedCsrfError = localStorage.getItem('lastCsrfError');
+            const lastDate = new Date(storedCsrfError);
+            const diffDate = Date.now() - lastDate.getTime();
+
+            if (!storedCsrfError || diffDate > FIVE_MINUTES_MS) {
+              localStorage.setItem('lastCsrfError', new Date().toISOString());
+
+              button.disabled = true;
+              status.textContent = '{% trans "Automatically rotating tokens..." %}';
+              status.style.color = 'green';
+              setTimeout(() => rotateCsrf(true), 1500);
+            }
+          };
+
+          /**
+           * Attempt to automatically fix the problem
+           */
+          autoRotateCsrf();
+        </script>
     </section>
 {% endblock %}
