fix(auth-v2): Nonce for CSRF inline-script

--- a/src/sentry/templates/sentry/403-csrf-failure-script.html
+++ b/src/sentry/templates/sentry/403-csrf-failure-script.html
@@ -1,5 +1,6 @@
+{% load sentry_assets %}
+{% script %}
 <script>
-
   const status = document.getElementById('csrf-status');
   const button = document.getElementById('csrf-rotate-btn');
 
@@ -98,3 +99,4 @@
    */
   autoRotateCsrf();
 </script>
+{% endscript %}
